--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,21 +20,31 @@
 }
 
 main {
-  article {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
+
+  @media (max-width: 769px) {
+    section {
+      padding: 0 16px;
+    }
   }
 
-  .demo-section {
-    box-sizing: border-box;
-    padding: 0 32px;
-    width: 60%;
+  @media (min-width: 768px) {
+    article {
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+    }
+
+    .demo-section {
+      box-sizing: border-box;
+      padding: 0 32px;
+      width: 60%;
+    }
+
+    .selection-section {
+      box-sizing: border-box;
+      padding: 0 32px;
+      width: 40%;
+    }
   }
 
-  .selection-section {
-    box-sizing: border-box;
-    padding: 0 32px;
-    width: 40%;
-  }
 }
