update some packages and upgrade angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <section class="demo-section">
     <infinite-calendar
       [events]="events"
+      [language]="'en'"
       (selectDate)="onSelectDate($event)"
     >
     </infinite-calendar>
