upgrade ng-infinite-calendar from 0.1.4 to 0.1.5

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <section class="demo-section">
     <infinite-calendar
       [events]="events"
-      [language]="'en'"
+      [language]="'jaJP'"
       (selectDate)="onSelectDate($event)"
     >
     </infinite-calendar>
