upgrade ng-infinite-calendar from v0.1.5 to v0.1.6

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <infinite-calendar
       [events]="events"
       [language]="'jaJP'"
+      [monthDateFormat]="'MMM/yyyy'"
       (selectDate)="onSelectDate($event)"
     >
     </infinite-calendar>
@@ -27,5 +28,6 @@
         </li>
       </ul>
     </span>
+
   </section>
 </article>
