--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <section class="demo-section">
     <infinite-calendar
       [events]="events"
-      [language]="'jaJP'"
+      [language]="'deDE'"
       [monthDateFormat]="'MMM/yyyy'"
       (selectDate)="onSelectDate($event)"
     >
